# fikl

./: .gitignore  Makefile  README.md  lint  pyproject.toml  requirements.txt  setup.py
fikl/: __init__.py  cli.py  scorers.py
proto/: config.proto
scripts/: install  lint  nx.py  proto  test  yaml_to_json
src/fikl/: __init__.py  __main__.py  config.py  decision.py  fetchers.py  graph.py  html.py  scorers.py  util.py
src/fikl/capnp/: config.capnp
src/fikl/data/: 500_Cities__Obesity_among_adults_aged___18_years.csv  City_zori_uc_sfrcondomfr_sm_sa_month.csv
src/fikl/data/census/: .~lock.co-est2022-pop.xlsx#  README.md
src/fikl/proto/: config_pb2.py  config_pb2.pyi
src/fikl/templates/: factors.html.j2  index.html.j2  metrics.html.j2
tests/: test_config.py  test_decision.py  test_fetchers.py  test_function.py  test_graph.py  test_html.py  test_scorers.py  test_scorers_Star.py  test_util.py
tests/data/: county_politics.yaml  ensemble_heist_films.csv  ensemble_heist_films.yaml  raw.csv  simple.csv  simple.yaml
tests/data/bool/: config.yaml  data.csv
tests/data/county_politics/: county_politics.csv
tests/data/ensemble_heist_films/: ensemble_heist_films.yaml
tests/data/fetchers/: config.yaml  data.csv
tests/data/simple/: factors.yaml  simple.yaml
